force-app/main/default/objects/ProjectType__c/ProjectType__c.object-meta.xml
<CustomObject>
    <description>Project Type defines a collection of Services and sets configuration options for a Project. Project Type is related to Project, Project Type Execution Company, Project Type Service, and Location Assignment.</description>
    <label>Project Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>