force-app/main/default/objects/ProjectType__c/fields/AddLocationsLeadTime__c.field-meta.xml
<CustomField>
    <fullName>AddLocationsLeadTime__c</fullName>
    <label>Add Locations Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>