force-app/main/default/objects/ProjectType__c/fields/AllowBundlingOfServices__c.field-meta.xml
<CustomField>
    <fullName>AllowBundlingOfServices__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To allow bundling service for specific project type</description>
    <label>Allow Bundling of Services</label>
    <type>Checkbox</type>
</CustomField>