force-app/main/default/objects/ProjectType__c/fields/AllowMultidays__c.field-meta.xml
<CustomField>
    <fullName>AllowMultidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multi-days</label>
    <type>Checkbox</type>
</CustomField>