force-app/main/default/objects/ProjectType__c/fields/AllowReattempt__c.field-meta.xml
<CustomField>
    <fullName>AllowReattempt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Reattempt</label>
    <type>Checkbox</type>
</CustomField>