force-app/main/default/objects/ProjectType__c/fields/AllowTeamManagement__c.field-meta.xml
<CustomField>
    <fullName>AllowTeamManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Team Management in OneHub Mobile</description>
    <inlineHelpText>Allow Team Management in OneHub Mobile</inlineHelpText>
    <label>Allow Team Management in OneHub Mobile</label>
    <type>Checkbox</type>
</CustomField>