force-app/main/default/objects/ProjectType__c/fields/CreateInvoice__c.field-meta.xml
<CustomField>
    <fullName>CreateInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Invoice</label>
    <type>Checkbox</type>
</CustomField>