force-app/main/default/objects/ProjectType__c/fields/Default3PLAccount__c.field-meta.xml
<CustomField>
    <fullName>Default3PLAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default 3PL Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Default3PLAccount</relationshipLabel>
    <relationshipName>DefaultThridPartyAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>