force-app/main/default/objects/ProjectType__c/fields/DefaultRetailerAccount__c.field-meta.xml
<CustomField>
    <fullName>DefaultRetailerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Retailer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.OneHubAccountType__c</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Types</relationshipLabel>
    <relationshipName>Project_Types</relationshipName>
    <type>Lookup</type>
</CustomField>