force-app/main/default/objects/ProjectType__c/fields/GracePeriodDuration__c.field-meta.xml
<CustomField>
    <fullName>GracePeriodDuration__c</fullName>
    <label>Grace Period Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>