force-app/main/default/objects/ProjectType__c/fields/InvoiceGracePeriod__c.field-meta.xml
<CustomField>
    <fullName>InvoiceGracePeriod__c</fullName>
    <label>Invoice Grace Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>