force-app/main/default/objects/ProjectType__c/fields/IsOneHubMobile__c.field-meta.xml
<CustomField>
    <fullName>IsOneHubMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicated if the projects are executed by OHM.</description>
    <label>Is OneHub Mobile</label>
    <type>Checkbox</type>
</CustomField>