force-app/main/default/objects/ProjectType__c/fields/IsProjectAccountMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsProjectAccountMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Project Account Mandatory</label>
    <type>Checkbox</type>
</CustomField>