force-app/main/default/objects/ProjectType__c/fields/LaunchLeadTime__c.field-meta.xml
<CustomField>
    <fullName>LaunchLeadTime__c</fullName>
    <label>Launch Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>