force-app/main/default/objects/ProjectType__c/fields/MaxServiceCount__c.field-meta.xml
<CustomField>
    <fullName>MaxServiceCount__c</fullName>
    <label>Max Service Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>