force-app/main/default/objects/ProjectType__c/fields/MinServiceCount__c.field-meta.xml
<CustomField>
    <fullName>MinServiceCount__c</fullName>
    <label>Min Service Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>