force-app/main/default/objects/ProjectType__c/fields/ProjectTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectTypeDescription__c</fullName>
    <label>Project Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>