force-app/main/default/objects/ProjectType__c/fields/ScheduleOption__c.field-meta.xml
<CustomField>
    <fullName>ScheduleOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Option</label>
    <referenceTo>ScheduleOption__c</referenceTo>
    <relationshipLabel>Project Types</relationshipLabel>
    <relationshipName>Project_Types</relationshipName>
    <type>Lookup</type>
</CustomField>