force-app/main/default/objects/ProjectType__c/fields/ServiceModel__c.field-meta.xml
<CustomField>
    <fullName>ServiceModel__c</fullName>
    <label>Service Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continuity</fullName>
            </value>
            <value>
                <fullName>Retail On Demand(Merchandising)</fullName>
            </value>
            <value>
                <fullName>Remodel</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>