force-app/main/default/objects/ProjectType__c/fields/SetScheduleDateLeadTime__c.field-meta.xml
<CustomField>
    <fullName>SetScheduleDateLeadTime__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Set Schedule Date Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>