force-app/main/default/objects/ProjectType__c/fields/ShowProjectSummaryReport__c.field-meta.xml
<CustomField>
    <fullName>ShowProjectSummaryReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Project Summary Report</label>
    <type>Checkbox</type>
</CustomField>