force-app/main/default/objects/ProjectType__c/fields/UseReservations__c.field-meta.xml
<CustomField>
    <fullName>UseReservations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Reservations</label>
    <type>Checkbox</type>
</CustomField>