force-app/main/default/objects/ProjectType__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>determine the visibility of the project attribute segment</description>
    <inlineHelpText>determine if the project attribute segment is visible or not</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>