force-app/main/default/objects/ProjectType__c/validationRules/Disallow_multi_day_and_bundled.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_multi_day_and_bundled</fullName>
    <active>true</active>
    <description>Multi day projects not allowed when a project is bundled.</description>
    <errorConditionFormula>AND ( AllowBundlingOfServices__c == true,  AllowMultidays__c == true)</errorConditionFormula>
    <errorDisplayField>AllowMultidays__c</errorDisplayField>
    <errorMessage>Multi Day projects are not allowed on a project that allows bundling of services.</errorMessage>
</ValidationRule>