force-app/main/default/objects/ProjectType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProjectTypeDescription__c</columns>
    <columns>MinServiceCount__c</columns>
    <columns>MaxServiceCount__c</columns>
    <columns>LaunchLeadTime__c</columns>
    <columns>GracePeriodDuration__c</columns>
    <columns>AllowTeamManagement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>